added services module

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,9 @@
+"""
+Environment variables template for AI Tutor backend.
+Copy this to .env and fill in your actual values.
+
+"""
+
 # Groq Configuration
 GROQ_API_KEY=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
 GROQ_MODEL=mixtral-8x7b-32768
@@ -5,19 +11,23 @@ GROQ_MODEL=mixtral-8x7b-32768
 # YouTube API
 YOUTUBE_API_KEY=AIzaSyA443L70nS8oB8j-Y-Rci336FRd4tya1_Q
 
-# Database
-DATABASE_URL=postgresql+asyncpg://postgres:password@localhost:5432/aitutor
 
-# Qdrant
+GROQ_MODEL=mixtral-8x7b-32768
+
+
+# Database Configuration
+DATABASE_URL=postgresql://postgres:password@localhost:5432/aitutor
+
+# Qdrant Configuration
 QDRANT_URL=http://localhost:6333
-QDRANT_COLLECTION=conversation_memory
+QDRANT_COLLECTION_NAME=conversation_memory
 
-# Authentication
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+# JWT Configuration
 SECRET_KEY=your-secret-key-change-in-production
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# App Settings
+# Application Settings
 DEBUG=True
 HOST=0.0.0.0
 PORT=8000
