--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,52 +1,49 @@
-# FastAPI Backend
+"""
+Dependencies for AI Tutor Backend.
+Install using: pip install -r requirements.txt
+"""
+# FastAPI & ASGI
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
-httpx==0.25.1
-pydantic==2.5.0
-pydantic-settings==2.1.0
 
 # Database
 sqlalchemy==2.0.23
 asyncpg==0.29.0
 alembic==1.12.1
-psycopg2-binary==2.9.9
 
-# Vector Database
-qdrant-client==1.6.6
-chromadb==0.4.22
+# Authentication
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
 
-# LangChain
+# Environment & Configuration
+python-dotenv==1.0.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+
+# HTTP Client
+httpx==0.25.1
+
+# LangChain Core
 langchain==0.1.0
-langchain-community==0.0.10
 langchain-core==0.1.0
+langchain-community==0.0.10
+
+# Groq Integration
 langchain-groq==0.1.0
-langchain-openai==0.0.5
-langchain-google-community[google-search]==0.0.5
+groq==0.4.0
+
+# YouTube & Search
 youtube-transcript-api==0.6.1
 pytube==15.0.0
 google-api-python-client==2.108.0
+langchain-google-community[google-search]==0.0.5
 
-# LLM Providers
-groq==0.4.0
-openai==1.3.0
-
-# Embeddings
+# Vector Database
+qdrant-client==1.6.6
 sentence-transformers==2.2.2
-langchain-huggingface==0.0.2
 
 # Utilities
-pytz==2023.3.post1
 tenacity==8.2.3
 python-dateutil==2.8.2
 tiktoken==0.5.2
-beautifulsoup4==4.12.2
-requests==2.31.0
-
-# Authentication
-authlib==1.3.0
-google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.1.1
