--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,49 +1,28 @@
-"""
-Dependencies for AI Tutor Backend.
-Install using: pip install -r requirements.txt
-"""
-# FastAPI & ASGI
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-
-# Database
-sqlalchemy==2.0.23
-asyncpg==0.29.0
-alembic==1.12.1
-
-# Authentication
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-
-# Environment & Configuration
-python-dotenv==1.0.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-
-# HTTP Client
-httpx==0.25.1
-
-# LangChain Core
-langchain==0.1.0
-langchain-core==0.1.0
-langchain-community==0.0.10
-
-# Groq Integration
-langchain-groq==0.1.0
-groq==0.4.0
-
-# YouTube & Search
-youtube-transcript-api==0.6.1
-pytube==15.0.0
-google-api-python-client==2.108.0
-langchain-google-community[google-search]==0.0.5
-
-# Vector Database
-qdrant-client==1.6.6
-sentence-transformers==2.2.2
-
-# Utilities
-tenacity==8.2.3
-python-dateutil==2.8.2
-tiktoken==0.5.2
+fastapi
+uvicorn[standard]
+python-multipart
+sqlalchemy
+asyncpg
+alembic
+psycopg2-binary
+python-jose[cryptography]
+passlib[bcrypt]
+python-dotenv
+pydantic
+pydantic-settings
+httpx
+langchain
+langchain-core
+langchain-community
+langchain-groq
+groq
+youtube-transcript-api
+pytube
+google-api-python-client
+qdrant-client
+sentence-transformers
+tenacity
+python-dateutil
+tiktoken
+beautifulsoup4
+requests
