backend running but still many bugs to fix!

--- a/backend/.env
+++ b/backend/.env
@@ -7,22 +7,18 @@ GROQ_MODEL=mixtral-8x7b-32768
 YOUTUBE_API_KEY=AIzaSyA443L70nS8oB8j-Y-Rci336FRd4tya1_Q
 
 
-GROQ_MODEL=mixtral-8x7b-32768
 
 
-# Database Configuration
-DATABASE_URL=postgresql://postgres:password@localhost:5432/aitutor
+DATABASE_URL=sqlite+aiosqlite:///./aitutor.db
 
-# Qdrant Configuration
+
 QDRANT_URL=http://localhost:6333
 QDRANT_COLLECTION_NAME=conversation_memory
 
-# JWT Configuration
 SECRET_KEY=your-secret-key-change-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Application Settings
 DEBUG=True
 HOST=0.0.0.0
 PORT=8000
