--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 
 # Groq Configuration
 GROQ_API_KEY=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
-GROQ_MODEL=mixtral-8x7b-32768
+GROQ_MODEL=llama-3.1-8b-instant
 
 # YouTube API
 YOUTUBE_API_KEY=AIzaSyA443L70nS8oB8j-Y-Rci336FRd4tya1_Q
@@ -12,8 +12,11 @@ YOUTUBE_API_KEY=AIzaSyA443L70nS8oB8j-Y-Rci336FRd4tya1_Q
 DATABASE_URL=sqlite+aiosqlite:///./aitutor.db
 
 
-QDRANT_URL=http://localhost:6333
-QDRANT_COLLECTION_NAME=conversation_memory
+QDRANT_URL = "https://d3a7a46c-79d7-4461-8dc9-e6c939baab4d.us-east4-0.gcp.cloud.qdrant.io"
+QDRANT_API_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.PG9YofnKnIbIvuKqIFyzDDDKhHyEYQxTM-nVoUgoq7U"
+QDRANT_COLLECTION_NAME = "conversation_memory"
+EMBEDDING_MODEL = "sentence-transformers/all-MiniLM-L6-v2"
+
 
 SECRET_KEY=your-secret-key-change-in-production
 ALGORITHM=HS256
